# Energyinschools

energy-in-schools/: .coveragerc  .flake8  .gitignore  README.md  force-requirements.txt  manage.py  microbit-bridge.txt  pyproject.toml  requirements.txt  wait_for_postgres.py
energy-in-schools/apps/: apps.py
energy-in-schools/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  settings.py  tests.py  tools.py  urls.py  utils.py  view_permissions.py  views.py
energy-in-schools/apps/addresses/: admin.py  models.py  serializers.py
energy-in-schools/apps/auth_token/: __init__.py  apps.py  auth_backends.py  serializers.py  tasks.py  tests.py  urls.py  userless_authentication.py  views.py
energy-in-schools/apps/blacklisted_emails/: __init__.py  (+8 more)
energy-in-schools/frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  webpack.config.dev.js  webpack.config.prod.js
energy-in-schools/microbit-web-bridge-react/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  package.json  tsconfig.json  webpack.config.dev.js  webpack.config.prod.js
energy-in-schools/samsung_school/: __init__.py  celery_.py  permissions.py  urls.py  wsgi.py
energy-in-schools/utilities/: alphanumeric.py  caching.py  custom_serializer_fields.py  decorators.py  enum_support_filter_set.py  exceptions.py  int_value_enum_mixin.py  interpolations.py  mixins.py  private_file_views.py  private_files_utils.py  requests_mock.py  rest.py  serializer_helpers.py  sqlalchemy_helpers.py  swagger_helpers.py  url_tools.py
energy-in-schools/webhub-hex-files/: microbit-webhub-v2.hex  microbit-webhub.hex
(+1186 files in other folders)
